fix console spacing

--- a/app/styles/console.less
+++ b/app/styles/console.less
@@ -7,19 +7,22 @@
   align-items: flex-start;
   flex-wrap: wrap;
 
+  border-bottom: 3px solid @body-bg;
+  border-top: 2px solid @body-bg;
+
 }
 
 .cr-error-header{
   background-color: @block-bg--colored;
   padding: 15px;
-  margin-top: 10px;
+  margin-top: 0px;
   margin-bottom: 10px;
   word-break: break-all;
 }
 
 .cr-error-header--error-trace{
   .cr-error-header;
-  margin-bottom: 5px;
+  margin-bottom: 3px;
   margin-top: 15px;
   word-break: break-all;
 }
@@ -94,13 +97,13 @@
 }
 
 .query-result-container{
-  margin-top: 20px; 
+  margin-top: 13px; 
 }
 
 .query-result-container__header{
   background: @block-bg--colored;
   border-bottom: 3px solid @body-bg;
-  border-left: 2px solid @query-result-container__header--color;
+  border-left: 1px solid @query-result-container__header--color;
   border-right: 1px solid @query-result-container__header--color;
   padding: 17px 10px;
   margin-bottom: 0px;
